@@ -12,11 +12,18 @@ defmodule Protox.Encode do
     Zigzag
   }
 
-  @spec encode(struct) :: iodata
+  @spec encode(struct) :: {:ok, iodata} | {:error, any}
   def encode(msg) do
     # A compilation error at the line below usually happen if `msg`
     # is not a struct generated by protox.
     msg.__struct__.encode(msg)
+  end
+
+  @spec encode!(struct) :: iodata | no_return
+  def encode!(msg) do
+    # A compilation error at the line below usually happen if `msg`
+    # is not a struct generated by protox.
+    msg.__struct__.encode!(msg)
   end
 
   @spec make_key_bytes(Protox.Types.tag(), Protox.Types.type()) :: iodata
@@ -116,7 +123,7 @@ defmodule Protox.Encode do
 
   @spec encode_message(struct) :: iodata
   def encode_message(value) do
-    encoded = value |> encode() |> :binary.list_to_bin()
+    encoded = value |> encode!() |> :binary.list_to_bin()
     [Varint.encode(byte_size(encoded)), encoded]
   end
 end
