@@ -1,6 +1,8 @@
 * xxx
+  - [Breaking change] encode/1 returns a tuple, use encode!/1 to get the old
+    behavior of encode/1
   - Raise RequiredFieldsError when encoding or decoding a Protobuf 2 message
-    with unset required fields (that is, that have the value `nil`).
+    with unset required fields (that is, that have the value `nil`)
 
 * 0.22.0
   - O(1) encoding of oneof fields
